Issue #12483: ctypes: Fix a crash when the destruction of a callback object triggers the garbage collector.